@@ -39,7 +39,7 @@
 /////////////----------------
 
 static const uint8_t usb_errors[] = {
-	0x02, 0x04, 0x07, 0x0a, 0x0f, 0x10, 0x11, 0x12, 0x13, 0x14, 0x15, 0x16, 0x80
+	0x02, 0x04, 0x07, 0x0a, 0x0f, 0x10, 0x11, 0x12, 0x13, 0x14, 0x15, 0x16, 0x20, 0x80
 };
 
 static int err_code(uint8_t code)
