@@ -10,6 +10,7 @@ Log of changes (libtifiles):
 	- use LF line endings throughout the sources.
 	- add initial, experimental TI-80 VSC support, by Randy Compton.
 	- convert README to UTF-8.
+	- add support for Nspire OS extensions, such as (and currently limited to) the English-Chinese dictionary.
 
 - 14/12/2011, version 1.1.5: debrouxl
 	- add Nspire CX OS support (.tco & .tcc extensions).
